--- a/core/pom.xml
+++ b/core/pom.xml
@@ -249,5 +249,14 @@
         </dependency>
         -->
     </dependencies>
+    
+    <reporting>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.9</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
