--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -19,9 +19,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.google</groupId>
+        <groupId>bz.cohors</groupId>
         <artifactId>bitcoinj-parent</artifactId>
-        <version>0.11.3</version>
+        <version>1.1d1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -32,15 +32,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.google</groupId>
+            <groupId>bz.cohors</groupId>
             <artifactId>bitcoinj</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-        <dependency>
+        <!-- dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.6.4</version>
-        </dependency>
+        </dependency -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
