--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -79,11 +79,11 @@
       <artifactId>jopt-simple</artifactId>
       <version>4.3</version>
     </dependency>
-    <dependency>
+    <!-- dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jdk14</artifactId>
       <version>1.6.4</version>
-    </dependency>
+    </dependency -->
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
